# Necs

./: CMakeLists.txt  README.md
src/: Archetype.h  Component.h  Core.h  Entity.h  Registry.h
